--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: VPS
+name: vps
 
 # controls
 on:
@@ -6,7 +6,7 @@ on:
     branches:: [ "main" ]
   pull_request:
     branches:: [ "main" ]
-  workflow_dispatch:
+   workflow_dispatch:
 
 jobs:
   build:
