--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,20 +1,20 @@
 name: vps
 
-# controls
+# Controls when the workflow will run
 on:
   push:
-    branches:: [ "main" ]
+    branches: [ "main" ]
   pull_request:
-    branches:: [ "main" ]
-   workflow_dispatch:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: action/checkout@v4
 
-    - name: Run VPS
-      run: curl -sSf https://sshx.io/get | sh -s run
+      - name: Run VPS
+        run: curl -sSf https://sshx.io/get | sh -s run
